QSA-107 Remove dependencies and update pipeline