@@ -1,27 +1,29 @@
 package com.unideb.qsa.domain.deserializer.elements;
 
+import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
 
-import com.google.common.collect.ImmutableList;
 import com.google.gson.JsonDeserializationContext;
 import com.google.gson.JsonElement;
 
 /**
  * Deserializer for config condition elements.
  */
-public final class ConfigConditionElement implements ConfigDefinitionElement<ImmutableList<String>> {
+public final class ConfigConditionElement implements ConfigDefinitionElement<List<String>> {
 
-    private ImmutableList<String> configCondition;
+    private List<String> configCondition;
 
     @Override
     public void populate(JsonElement jsonElement, JsonDeserializationContext context) {
-        ImmutableList.Builder<String> configConditionBuilder = new ImmutableList.Builder<>();
-        jsonElement.getAsJsonArray().forEach(element -> configConditionBuilder.add(element.getAsString()));
-        configCondition = configConditionBuilder.build();
+        configCondition = StreamSupport.stream(jsonElement.getAsJsonArray().spliterator(), true)
+                                       .map(JsonElement::getAsString)
+                                       .collect(Collectors.toList());
     }
 
     @Override
-    public ImmutableList<String> getValue() {
-        return Optional.ofNullable(configCondition).orElse(ImmutableList.of());
+    public List<String> getValue() {
+        return Optional.ofNullable(configCondition).orElse(List.of());
     }
 }
